...
    }
    
    var body: some View {
        NavigationStack {
            ScrollView {
                VStack {
                    TextField(Money(0)?.formatted() ?? "$0.00",
                              value: $entryAmount,
                              format: .currency(code: "USD"),
                              prompt: Text(Money(0)?.formatted() ?? "$0.00")
                    )
                    .keyboardType(.decimalPad)
                    .multilineTextAlignment(.trailing)
...
