...
        if (slices.reduce(into: Set<Transaction.Category>()) { set, slice in set.insert(slice.category) }).count == 1 {
            return slices.first!.category.name.value
        }
        if let selectedSlice = selectedSlice {
            return selectedSlice.name
        }
        return String(localized: "Net Total")
    }
    
    private var selectedSliceSymbol: String {
        if (slices.reduce(into: Set<Transaction.Category>()) { set, slice in set.insert(slice.category) }).count == 1 {
            return slices.first!.category.name.value
        }
...
