...
      }
    },
    "Greater than" : {
      "comment" : "Comparison method for a goal, where the spending should be greater than the target.",
      "isCommentAutoGenerated" : true
    },
    "Groceries, Rent, Paycheck, etc..." : {

    },
    "Hide" : {
      "comment" : "The text for a button that hides a section in a list.",
      "isCommentAutoGenerated" : true
    },
...
        }
      }
    },
    "Name" : {

    },
    "Net Total" : {

    },
    "Net Worth" : {
      "comment" : "A heading for the user's net worth.",
      "isCommentAutoGenerated" : true
    },
...

    },
    "To" : {
      "comment" : "A label displayed for the account to which a transfer is made.",
      "isCommentAutoGenerated" : true
    },
    "Total" : {

    },
    "Touch and hold to clear the amount" : {
      "comment" : "A hint for the user to touch and hold the delete button to clear the amount.",
      "isCommentAutoGenerated" : true
    },
...
