...
            date: .now,
            categoryId: Transaction.Category.samplePaycheck.id,
            kind: .income
        ),
        .init(
            id: Id(),
            title: .init("Gas"),
            amount: .init(57.30)!,
            date: .now,
            categoryId: Transaction.Category.sampleVehicle.id,
            location: .init("Redmond, WA")
        ),
        .init(
...
